tests/rosetta/transpiler/erl/ftp.error
exit status 127
Connected to localhost:21
Logged in as anonymous
"/"
escript: exception error: no case clause matching nil
  in function  main:'-list/1-Fun_loop/5-0-'/5 (/workspace/mochi/tests/rosetta/transpiler/erl/ftp.erl, line 52)
  in call from main:list/1 (/workspace/mochi/tests/rosetta/transpiler/erl/ftp.erl, line 60)
  in call from main:main/0 (/workspace/mochi/tests/rosetta/transpiler/erl/ftp.erl, line 75)
  in call from main:main/1 (/workspace/mochi/tests/rosetta/transpiler/erl/ftp.erl, line 95)
  in call from escript:run/2 (escript.erl, line 904)
  in call from escript:start/1 (escript.erl, line 418)
  in call from init:start_it/1 
  in call from init:start_em/1 
